--- a/_posts/2024-05-02-simplex.md
+++ b/_posts/2024-05-02-simplex.md
@@ -9,6 +9,8 @@ figure: https://znpdco.github.io/blogimage/2024-05-02-simplex/figure.png
 
 > 开始前的一点碎碎念：这篇文章原本是在 4 月 20 日写的，然后就经历了 gitee 爆炸导致博客园样式不能用，我就在 github 上建立了这个博客，把它转存到这里了。
 >
+> 由于这里的 markdown 较为严格，应该不会把博客园搬过来了……
+>
 > 这篇文章在 [博客园](https://www.cnblogs.com/znpdco/p/18147653) 的地址。
 >
 > 转载请附上 [原文地址](https://znpdco.github.io/%E7%AE%97%E6%B3%95/2024/05/02/simplex.html)。
@@ -27,6 +29,7 @@ figure: https://znpdco.github.io/blogimage/2024-05-02-simplex/figure.png
 > 某机床厂生产甲、乙两种机床，每台销售后的利润分别为 $4000$ 元与 $3000$ 元。 生产甲机床需用 $A$、$B$ 机器加工，加工时间分别为每台 $2$ 小时和 $1$ 小时；生产乙机床需用 $A$、$B$、$C$ 三种机器加工，加工时间为每台各一小时。若每天可用于加工的机器时数分别为 $A$ 机器 $10$ 小时、$B$ 机器 $8$ 小时和 $C$ 机器 $7$ 小时，问该厂每天应生产甲、乙机床各几台，才能使该天的总利润最大？
 
 上述问题的数学模型：设该厂生产 $x_1$ 台甲机床和 $x_2$ 台乙机床时总利润最大，则 $x_1$、$x_2$ 应满足：
+
 $$
 \begin{aligned}
 & \max z=4x_1+3x_2 \\
@@ -38,11 +41,13 @@ x_1,x_2\ge0
 \end{cases}
 \end{aligned}
 $$
+
 这里变量 $x_1$、$x_2$ 称之为**决策变量**，上面的最大式被称为问题的**目标函数**，下面约束条件中的几个不等式是问题的**约束条件**，记为 $\text{s.t.}$（即 subject to）。由于上面的目标函数及约束条件均为线性函数，故被称为线性规划问题。 
 
 ### 线性规划的标准形
 
 线性规划的标准形式如下：
+
 $$
 \begin{aligned}
 & \max z = \sum_{j = 1}^{n}c_jx_j \\ 
@@ -66,17 +71,20 @@ $$
 那么有人可能要问了，为什么不能将 $x<1$ 的一般型转换为标准型呢？
 
 举个例子：
+
 $$
 \begin{aligned}
 & \max z = x_1 \\ 
 & x_1<1
 \end{aligned}
 $$
+
 发现是无解的。
 
 ### 线性规划的松弛形
 
 因为不等式处理起来不如等式方便，所以我们定义松弛型：
+
 $$
 \begin{aligned}
 & \max z = \sum_{j = 1}^{n}c_jx_j \\ 
@@ -90,14 +98,19 @@ $$
 ### 标准型转松弛形
 
 考虑加入辅助变量 $x_{n+1}\sim x_{n+m}$，如下：
+
 $$
 \sum_{j = 1}^{n}a_{ij}x_j \le b_i \Rightarrow x_{n+i}+\sum_{j = 1}^{n}a_{ij}x_j = b_i\ (x_{n+i}\ge0)
 $$
+
 那么就有：
+
 $$
 \sum_{j = 1}^{n}a_{ij}x_j \le b_i \Rightarrow x_{n+i} = b_i-(\sum_{j = 1}^{n}a_{ij}x_j)
 $$
+
 以机床厂问题为例：
+
 $$
 \begin{aligned}
 & \max z=4x_1+3x_2 \\
@@ -109,7 +122,9 @@ x_1,x_2\ge0
 \end{cases}
 \end{aligned}
 $$
+
 可以被转换成：
+
 $$
 \begin{aligned}
 & \max -z=0-(4x_1+3x_2) \\
@@ -137,6 +152,7 @@ $$
 3. 重复 2 直到结果最优。
 
 我们以上面的线性规划松弛型为例子（此后，我们会省略变量均大于等于 $0$ 这一要求，请读者自行理解）：
+
 $$
 \begin{array}{}
 -z & = & 0 & - & ( & 4x_1 & + & 3x_2 & ) \\
@@ -161,9 +177,11 @@ $$
 ### 如何判断最优
 
 我们知道，目标函数可以由非基本变量得出：
+
 $$
 z=\sum_{j = 1}^{n}c_jx_j
 $$
+
 当达到最优解时，我们发现 $c_j$ 必定都小于等于 $0$。
 
 为什么，因为若 $c_j$ 大于 $0$，那么 $z$ 的值则会与 $x_j$ 成正比例关系，若 $x_j$ 变大，$z$ 也会变大，所以当前并不是最优解。
@@ -179,6 +197,7 @@ $$
 所谓旋转操作，就是**将非基本变量与基本变量交换**的操作。
 
 可能有点拗口，举个例子：
+
 $$
 \begin{array}{}
 -z & = & 0 & - & ( & 4x_1 & + & 3x_2 & ) \\
@@ -187,7 +206,9 @@ x_4 & = & 8 & - & ( & x_1 & + & x_2 & ) \\
 x_5 & = & 7 & - & ( &  &  & x_2 & ) \\
 \end{array}
 $$
+
 将 $x_1$ 与 $x_3$ 交换，我们就用 $x_3$ 来表示 $x_1$：
+
 $$
 \begin{array}{}
 -z & = & 0 & - & ( & 4x_1 & + & 3x_2 & ) \\
@@ -211,6 +232,7 @@ x_5 & = & 7 & - & ( &  &  & x_2 & ) \\
 $$
 
 然后把 $x_1$ 当作基本变量，将 $x_3$ 当作非基本变量，把 $x_1$ 代入其它式子：
+
 $$
 \begin{array}{}
 -z & = & 0 & - & ( & 4(5-\frac{1}{2}x_2-\frac{1}{2}x_3) & + & 3x_2 & ) \\
@@ -234,6 +256,7 @@ x_5 & = & 7 & - & ( & x_2 & ) \\
 $$
 
 因为交换了，我们把 $x_3$ 移动到 $x_1$ 原本那一列，看看和原式子有什么不同：
+
 $$
 \begin{array}{}
 -z & = & -20 & - & ( & -2x_3 & + & x_2 & ) \\
@@ -242,7 +265,9 @@ x_4 & = & 3 & - & ( & -\frac{1}{2}x_3 & + & \frac{1}{2}x_2 & ) \\
 x_5 & = & 7 & - & ( & & & x_2 & ) \\
 \end{array}
 $$
+
 比较一下：
+
 $$
 \begin{array}{}
 -z & = & 0 & - & ( & 4x_1 & + & 3x_2 & ) \\
@@ -258,6 +283,7 @@ x_4 & = & 3 & - & ( & -\frac{1}{2}x_3 & + & \frac{1}{2}x_2 & ) \\
 x_5 & = & 7 & - & ( & & & x_2 & ) \\
 \end{array}
 $$
+
 我们发现，对于将基本变量 $x_3$ 与非基本变量 $x_1$ 交换的操作，**原本**的 $x_3$ 这一行（第二行）除去 $x_1$ 自己，其它的系数都除以了 $x_1$ 的系数 $2$，而 $x_1$ 自己则是因为与 $x_3$ 交换变成了 $x_3$ 的系数（也就是 $1$）之后才除以了 $x_1$ 原本的系数。
 
 仔细观察其它列的变换，我们发现它们都减去了自己原本 $x_1$ 系数倍的 $x_3$ 这一行的值，比如对于第一行的第一项，它减去了原本 $x_1$ 的系数（也就是 $4$）乘以第二行的第一项 $5$（注意是更新后的）也就是减去了 $20$；比如对于第一行的第二项，它自己先是变成了 $x_3$ 的系数 $0$，再减去了原本 $x_1$ 的系数（也就是 $4$）乘以第二行的第二项 $\frac{1}{2}$（注意也是更新后的）也就是减去了 $2$。
@@ -267,6 +293,7 @@ $$
 没有理解没有关系，我们换个角度：
 
 我们以矩阵的形式观察，首先可以将这原本的松弛型式子的系数转换为矩阵（定义矩阵下标从 $0$ 开始，矩阵右边多出来的三列就是基本变量的系数，我们将基本变量标红）：
+
 $$
 \begin{array}{}
 -z & = & 0 & - & ( & 4x_1 & + & 3x_2 & ) \\
@@ -283,7 +310,9 @@ x_5 & = & 7 & - & ( &  &  & x_2 & ) \\
 7 & 0 & 1 & 0 & 0 & 1 \\
 \end{pmatrix}
 $$
+
 我们进行换元操作时把 $x_1$ 与 $x_3$ 交换，$x_1$ 变成基本变量，$x_3$ 变成非基本变量：
+
 $$
 \begin{pmatrix}
 \text{常数} & \textcolor{red}{x_1} & x_2 & x_3 & \textcolor{red}{x_4} & \textcolor{red}{x_5} \\
@@ -293,7 +322,9 @@ $$
 7 & 0 & 1 & 0 & 0 & 1 \\
 \end{pmatrix}
 $$
+
 同时我们对第二行进行处理以保证基本变量系数均为 $1$：
+
 $$
 \begin{pmatrix}
 \text{常数} & \textcolor{red}{x_1} & x_2 & x_3 & \textcolor{red}{x_4} & \textcolor{red}{x_5} \\
@@ -303,7 +334,9 @@ $$
 7 & 0 & 1 & 0 & 0 & 1 \\
 \end{pmatrix}
 $$
+
 我们此时需要将其他行原本的 $x_1$ 系数化为 $0$，实际上就是将每一项都减去这一行原本 $x_1$ 系数倍的第二行，同时因为其他行的 $x_3$ 系数都是 $0$，所以需要替换：
+
 $$
 \begin{pmatrix}
 \text{常数} & \textcolor{red}{x_1} & x_2 & x_3 & \textcolor{red}{x_4} & \textcolor{red}{x_5} \\
@@ -313,7 +346,9 @@ $$
 7-0\times5 & 0 & 1-0\times\frac{1}{2} & 0-0\times\frac{1}{2} & 0 & 1 \\
 \end{pmatrix}
 $$
+
 得到：
+
 $$
 \begin{pmatrix}
 \text{常数} & \textcolor{red}{x_1} & x_2 & x_3 & \textcolor{red}{x_4} & \textcolor{red}{x_5} \\
@@ -327,6 +362,7 @@ $$
 ---
 
 发现实际上三个基本变量都是 $1$ 或者 $0$，所以我们将它们省略，得到一个更简略的矩阵：
+
 $$
 \begin{array}{}
 -z & = & 0 & - & ( & 4x_1 & + & 3x_2 & ) \\
@@ -342,7 +378,9 @@ x_5 & = & 7 & - & ( &  &  & x_2 & ) \\
 7 & 0 & 1 \\
 \end{pmatrix}
 $$
+
 同理的变换方法，交换系数（左边是包含那三个基本变量的过程，右边是**省略三个基本变量**（注意，是基本变量，不一定是 $x_3,x_4,x_5$）的过程，对照着看更清晰）：
+
 $$
 \left.\begin{pmatrix}
 \text{常数} & \textcolor{red}{x_1} & x_2 & x_3 & \textcolor{red}{x_4} & \textcolor{red}{x_5} \\
@@ -357,7 +395,9 @@ $$
 7 & 0 & 1 \\
 \end{pmatrix}
 $$
+
 将其它行的 $x_1$ 都消掉：
+
 $$
 \left.\begin{pmatrix}
 \text{常数} & \textcolor{red}{x_1} & x_2 & x_3 & \textcolor{red}{x_4} & \textcolor{red}{x_5} \\
@@ -373,6 +413,7 @@ $$
 7 & 0 & 1 \\
 \end{pmatrix}
 $$
+
 在代码实现上，明显省略三个基本变量会更加好写。
 
 对于将基本变量 $x_{n+l}$ 与非基本变量 $x_e$ 交换，有以下代码：
@@ -446,6 +487,7 @@ void simplex() {
 我们发现，在求解基本可行解中，如果出现某一个基本变量小于 $0$ 的情况，是不可行的。
 
 比如：
+
 $$
 \begin{aligned}
 & \max z=x_1+x_2 \\
@@ -456,7 +498,9 @@ x_1,x_2\ge0
 \end{cases}
 \end{aligned}
 $$
+
 那么转换为标准型：
+
 $$
 \begin{aligned}
 & \max z=x_1+x_2 \\
@@ -467,7 +511,9 @@ x_1,x_2\ge0
 \end{cases}
 \end{aligned}
 $$
+
 转换为松弛型：
+
 $$
 \begin{aligned}
 & \max z=x_1+x_2 \\
@@ -478,9 +524,11 @@ x_1,x_2,x_3,x_4\ge0
 \end{cases}
 \end{aligned}
 $$
+
 我们发现，当 $x_1=0,x_2=0$ 时，$x_3=-10,x_4=-3$，它是不满足 $x_3\ge0,x_4\ge0$ 的要求的，所以我们认为它不合法。
 
 我们观察以下基本不可行解有什么特点，我们将上面的松弛型整理一下：
+
 $$
 \begin{array}{}
 -z & = & 0 & - & ( & x_1 & + & x_2 & ) \\
@@ -488,6 +536,7 @@ x_3 & = & -10 & - & ( & -x_1 & + & -x_2 & ) \\
 x_4 & = & -3 & - & ( & 2x_1 & + & 3x_2 & ) \\
 \end{array}
 $$
+
 我们发现，当我们将这些非基本变量都取为 $0$ 时，因为 $a_{1,0}=-10$，所以导致 $x_3=-10$。同理因为 $a_{2,0}=-8$，所以 $x_4=-8$。
 
 也就是说，一个初始解可行当且仅当对于任意的 $i$ 都满足 $a_{i,0}\ge0$。
@@ -527,6 +576,7 @@ void init() {
 ## 单纯形算法的几何意义
 
 我们换一个角度来看线性规划：通过图的视角。考虑以下问题：
+
 $$
 \begin{aligned}
 & \max x + y \\
@@ -537,6 +587,7 @@ $$
 \end{cases}
 \end{aligned}
 $$
+
 我们可以画出以下图表：
 
 ![](https://znpdco.github.io/blogimage/2024-05-02-simplex/simplex-1.png)
@@ -560,6 +611,7 @@ $$
 我们设移动的方向是 $\lambda$，距离是 $\theta$，我们进行旋转操作相当于走 $x'=x-\theta\lambda$。
 
 对应到单纯形中的矩阵，例如还是机床厂问题：
+
 $$
 \begin{pmatrix}
 -z\text{ or 常数} & x_1 & x_2 & \textcolor{red}{x_3} & \textcolor{red}{x_4} & \textcolor{red}{x_5} \\
@@ -569,11 +621,13 @@ $$
 7 & 0 & 1 & 0 & 0 & 1 \\
 \end{pmatrix}
 $$
+
 我们的方向 $\lambda$ 就相当与某一个非基本变量的那一列，比如此处我们选择第一列，可以发现  $4(-z)+-x_1+0x_2+2x_3+1x_4+0x_5=0$，那么就是 $\lambda=(4,-1,0,2,1,0)$。
 
 我们走多少呢？走过多会超出区域，过少会达不到顶点。可以发现最多只能是 $\theta=5$，也就是限制最紧的那一个：$10\div2=5$，我们就可以得到解：
 
 $x'=(0,0,0,10,8,7)-(4,-1,0,2,1,0)\times5=(-20,5,0,0,3,7)$，发现是对应的：
+
 $$
 \begin{pmatrix}
 -z\text{ or 常数} & \textcolor{red}{x_1} & x_2 & x_3 & \textcolor{red}{x_4} & \textcolor{red}{x_5} \\
@@ -595,6 +649,7 @@ $$
 我们发现，旋转一次的时间复杂度为 $O(nm)$。假设旋转 $k$ 次，那么时间复杂度就是 $O(knm)$。
 
 在很长一段时间内，人们认为单纯形是多项式时间复杂度的。直到 V. Klee and G. L. Minty[1972] 构造了一个例子，我们称它为 Klee–Minty 问题：
+
 $$
 \begin{aligned}
 & \max x_n \\
@@ -604,6 +659,7 @@ $$
 \end{cases}
 \end{aligned}
 $$
+
 其中，$0<\delta\le\frac{1}{3}$。
 
 该问题的时间复杂度是质数级别的。该问题的可行域是顶点被扰动了的单位超立方体（unit hypercube），如果选择全零作为初始可行解进行单纯形算法，在几何意义下，单纯形算法将会遍历每一个顶点，进行 $2^n-1$ 次转动操作，才可以得到最优解。
@@ -627,6 +683,7 @@ $$
 我们称原问题为 LP，对偶问题为 DP。
 
 原问题有：
+
 $$
 \begin{aligned}
 & \max z=CX \\
@@ -636,7 +693,9 @@ X\ge 0
 \end{cases}
 \end{aligned}
 $$
+
 对偶问题有：
+
 $$
 \begin{aligned}
 & \max w=b^TX \\
@@ -646,7 +705,9 @@ X\ge 0
 \end{cases}
 \end{aligned}
 $$
+
 简单来说，我们将单纯形矩阵进行矩阵转置后再进行朴素单纯形即可。还是以机床厂问题为例：
+
 $$
 \begin{pmatrix}
 0 & 4 & 3 \\
@@ -655,7 +716,9 @@ $$
 7 & 0 & 1 \\
 \end{pmatrix}
 $$
+
 它的 DP 是：
+
 $$
 \begin{pmatrix}
 0 & 10 & 8 & 7 \\
@@ -663,6 +726,7 @@ $$
 3 & 1 & 1 & 1 \\
 \end{pmatrix}
 $$
+
 即原矩阵的转置。
 
 | 对偶问题（下）\\原问题（右） | 最优解 | 无界解 | 无可行解 |
@@ -683,11 +747,13 @@ $$
 
 我们观察后可以发现，如果一个规划问题它的可行域多面体的所有顶点都是整数点的话（例如图中 $P$ 就满足这个条件，而 $P1$ 和 $P2$ 都不满足这个条件），那就可以满足线性规划最优解为整数了。
 
-证明全幺模矩阵可行域的顶点都在整点上：一个顶点无非是将一些线性无关的不等式改成等式后的线性方程组的解。如果矩阵 $A$ 是全幺模的，若满足 $A_S$ 是 $A$ 的[非奇异方阵](https://baike.baidu.com/item/奇异矩阵/9658459)，那么就有 $\det A_S=\pm1$（因为全幺模矩阵保证了 $\det A_S=0\text{ or }\pm1$，而非奇异方阵保证了 $\det A_S\neq0$）。若 $\det A_S^{(i)}|b_S$ 是将方阵 $A_S$ 的第 $i$ 列替换为 $b$ 得到的矩阵，那么依[克莱姆法则](https://baike.baidu.com/item/克莱姆法则/7211518)（Cramer's Rule）可知：
+证明全幺模矩阵可行域的顶点都在整点上：一个顶点无非是将一些线性无关的不等式改成等式后的线性方程组的解。如果矩阵 $A$ 是全幺模的，若满足 $A_S$ 是 $A$ 的[非奇异方阵](https://baike.baidu.com/item/奇异矩阵/9658459)，那么就有 $\det A_S=\pm1$（因为全幺模矩阵保证了 $\det A_S=0\text{ or }\pm1$，而非奇异方阵保证了 $\det A_S\neq0$）。若 $\det A_S^{(i)}\|b_S$ 是将方阵 $A_S$ 的第 $i$ 列替换为 $b$ 得到的矩阵，那么依[克莱姆法则](https://baike.baidu.com/item/克莱姆法则/7211518)（Cramer's Rule）可知：
+
 $$
 x_i=\dfrac{\det A_S^{(i)}|b_S}{\det A_S}
 $$
-因为 $A_S^{(i)}|b_S$ 方阵中的每一个数均为整数，所以 $\det A_S^{(i)}|b_S$ 为整数。同时因为 $\det A_S=\pm1$，所以 $x_i$ 必定为整数。以此类推，所以顶点均为整点。
+
+因为 $A_S^{(i)}\|b_S$ 方阵中的每一个数均为整数，所以 $\det A_S^{(i)}\|b_S$ 为整数。同时因为 $\det A_S=\pm1$，所以 $x_i$ 必定为整数。以此类推，所以顶点均为整点。
 
 ---
 
@@ -1036,7 +1102,7 @@ int main() {
 
 ### [「SHOI2004」最小生成树](https://www.luogu.com.cn/problem/P4412)
 
-> 给定一个 $n$ 点 $m$ 边的简单图，每条边将边权修改为 $w_i'\gets w_i+c$ 具有代价 $|c|$，给定简单图上的一棵生成树 $T$，要求最小的代价修改简单图上的每一个边权使得这颗生成树 $T$ 变为最小生成树。
+> 给定一个 $n$ 点 $m$ 边的简单图，每条边将边权修改为 $w_i'\gets w_i+c$ 具有代价 $\|c\|$，给定简单图上的一棵生成树 $T$，要求最小的代价修改简单图上的每一个边权使得这颗生成树 $T$ 变为最小生成树。
 >
 > $1\le n\le 50,1\le m\le 1500$
 
@@ -1270,6 +1336,6 @@ int main() {
 
 ## 参考资料
 
-- [线性规划-单纯形算法详解 | 细语呢喃](https://www.hrwhisper.me/introduction-to-simplex-algorithm/)
+- [线性规划-单纯形算法详解 \| 细语呢喃](https://www.hrwhisper.me/introduction-to-simplex-algorithm/)
 - [数学规划（3）单纯形法的进一步讨论](https://zhuanlan.zhihu.com/p/680244753)
-- [线性规划 | Daltao's blog!](https://taodaling.github.io/blog/2019/06/27/%E7%BA%BF%E6%80%A7%E8%A7%84%E5%88%92/)
+- [线性规划 \| Daltao's blog!](https://taodaling.github.io/blog/2019/06/27/%E7%BA%BF%E6%80%A7%E8%A7%84%E5%88%92/)
