--- a/_posts/2024-05-02-simplex.md
+++ b/_posts/2024-05-02-simplex.md
@@ -7,6 +7,8 @@ shortinfo: 单纯形法是解决线性规划问题的一个有效的算法。使
 figure: https://znpdco.github.io/blogimage/2024-05-02-simplex/figure.png
 ---
 
+（头图源《请问您今天要来点兔子吗？》香风智乃）
+
 > 开始前的一点碎碎念：这篇文章原本是在 4 月 20 日写的，然后就经历了 gitee 爆炸导致博客园样式不能用，我就在 github 上建立了这个博客，把它转存到这里了。
 >
 > 由于这里的 markdown 较为严格，应该不会把博客园搬过来了……
