--- a/_posts/2024-05-02-simplex.md
+++ b/_posts/2024-05-02-simplex.md
@@ -2,7 +2,7 @@
 layout: post
 title: 算法中的变形金刚——单纯形算法学习笔记
 categories: [算法]
-tags: [算法, 原创, 单纯形]
+tags: [算法, 原创, 数学]
 shortinfo: 单纯形法是解决线性规划问题的一个有效的算法。使用单纯形能……
 figure: https://znpdco.github.io/blogimage/2024-05-02-simplex/figure.png
 ---
