网站布局优化

--- a/_posts/2024-05-02-simplex.md
+++ b/_posts/2024-05-02-simplex.md
@@ -4,7 +4,7 @@ title: 算法中的变形金刚——单纯形算法学习笔记
 categories: [算法]
 tags: [算法, 原创, 数学]
 shortinfo: 单纯形法是解决线性规划问题的一个有效的算法。使用单纯形能……
-figure: https://znpdco.github.io/blogimage/2024-05-02-simplex/figure.png
+figure: {{ site.imagehost }}/2024-05-02-simplex/figure.png
 ---
 
 （头图源《请问您今天要来点兔子吗？》香风智乃）
@@ -592,7 +592,7 @@ $$
 
 我们可以画出以下图表：
 
-![](https://znpdco.github.io/blogimage/2024-05-02-simplex/simplex-1.png)
+![]({{ site.imagehost }}/2024-05-02-simplex/simplex-1.png)
 
 容易发现，最优解必定在顶点上，不需要考虑内部点。（因为围成的可行域一定是凸的）
 
@@ -604,7 +604,7 @@ $$
 
 先找到一个顶点，然后从这个顶点，沿着某条边线，走到下一个顶点，直到最优。方向的选择可以有很多种，最多使用的是比较短视的方法：沿着最陡峭的那一条，追求当前步上升最快。
 
-![](https://znpdco.github.io/blogimage/2024-05-02-simplex/simplex-2.png)
+![]({{ site.imagehost }}/2024-05-02-simplex/simplex-2.png)
 
 因为可行域它是凸的，就保证了要么解无穷大要么只有一个极值。
 
@@ -644,7 +644,7 @@ $$
 
 同时，如果可行域不包括原点，那么我们也是需要建立一个初始可行解的，否则我们就没有在顶点上跑，矛盾。
 
-![](https://znpdco.github.io/blogimage/2024-05-02-simplex/simplex-3.png)
+![]({{ site.imagehost }}/2024-05-02-simplex/simplex-3.png)
 
 ## 单纯形算法的时间复杂度分析
 
@@ -666,7 +666,7 @@ $$
 
 该问题的时间复杂度是质数级别的。该问题的可行域是顶点被扰动了的单位超立方体（unit hypercube），如果选择全零作为初始可行解进行单纯形算法，在几何意义下，单纯形算法将会遍历每一个顶点，进行 $2^n-1$ 次转动操作，才可以得到最优解。
 
-![](https://znpdco.github.io/blogimage/2024-05-02-simplex/simplex-4.png)
+![]({{ site.imagehost }}/2024-05-02-simplex/simplex-4.png)
 
 但是，Borgwardt (1982) 证明单纯形算法的平均复杂度是多项式时间的；Haimovich (1983) 证明了迭代次数的数学期望实际上是线性的；Spielman and Teng (2004) 引入了平滑型复杂度理论（smoothed analysis）。Spielman & Teng 定理断言：**在线性规划问题上加入随机高斯扰动，单纯形算法期望用多项式步数求解**。
 
@@ -745,7 +745,7 @@ $$
 
 若矩阵是全幺模矩阵，该线性规划最优解为整数。
 
-![](https://znpdco.github.io/blogimage/2024-05-02-simplex/simplex-5.png)
+![]({{ site.imagehost }}/2024-05-02-simplex/simplex-5.png)
 
 我们观察后可以发现，如果一个规划问题它的可行域多面体的所有顶点都是整数点的话（例如图中 $P$ 就满足这个条件，而 $P1$ 和 $P2$ 都不满足这个条件），那就可以满足线性规划最优解为整数了。
 
