--- a/_posts/2024-05-02-exkmp.md
+++ b/_posts/2024-05-02-exkmp.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: exkmp？什么神奇算法？
+title: 字符串的公共前缀——exkmp
 categories: [算法]
 tags: [算法, 原创, 字符串]
 shortinfo: exkmp 是一种特殊的字符串算法，在 2020 年的 NOIP 中也考察过……
