--- a/_posts/2024-05-02-exkmp.md
+++ b/_posts/2024-05-02-exkmp.md
@@ -4,7 +4,7 @@ title: 字符串的公共前缀——exkmp
 categories: [算法]
 tags: [算法, 原创, 字符串]
 shortinfo: exkmp 是一种特殊的字符串算法，在 2020 年的 NOIP 中也考察过……
-figure: https://cdn.jsdelivr.net/gh/znpdco/blogimage/2024-05-02-exkmp/figure.png
+figure: https://znpdco.github.io/blogimage/2024-05-02-exkmp/figure.png
 ---
 
 （头图源《请问您今天要来点兔子吗？》保登心爱）
