--- a/_posts/2024-05-02-welcome.md
+++ b/_posts/2024-05-02-welcome.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: 我和这个博客的故事
+title: 关于我和这个博客
 categories: [博客]
 tags: [博客]
-shortinfo: 这里有些话和你说……
+shortinfo: 我曾经在很多平台搭建过博客……
 figure: https://cdn.luogu.com.cn/upload/image_hosting/zflatz83.png
 top: 1
 ---
@@ -44,6 +44,6 @@ top: 1
 
 # 发现了文章问题或者有疑问，如何联系我？
 
-由于我还没有配置评论功能，所以大家可以通过邮箱和我联系：<a class="btn btn-default btn-sm" href="mailto:{{ site.author.email }}"><i class="fa-solid fa-envelope"></i>{{ site.author.email }}</a>。
+~~由于我还没有配置评论功能~~评论功能已经配置好啦，大家可以进行评论。所以大家可以通过邮箱和我联系：<a class="btn btn-default btn-sm" href="mailto:{{ site.author.email }}"><i class="fa-solid fa-envelope"></i>{{ site.author.email }}</a>。
 
 如果您不方便，也可以 Q 我一下：<a class="btn btn-default btn-sm" href="tencent://message/?uin={{ site.author.qq }}&Site=&Menu=yes"><i class="fa-brands fa-qq"></i>{{ site.author.qq }}</a>。
