--- a/_posts/2024-05-07-FWT.md
+++ b/_posts/2024-05-07-FWT.md
@@ -4,7 +4,7 @@ title: 构造照亮世界——快速沃尔什变换 (FWT)
 categories: [算法]
 tags: [算法, 原创, 多项式]
 shortinfo: 之前学习 FFT 的时候，我们知道 FFT 是用来快速求两个多项式乘积的，而 FWT 解决的多项式的位运算……
-figure: https://znpdco.github.io/blogimage/2024-05-07-FWT/figure.png
+figure: https://znpdco.github.io/blogimage/2024-05-07-FWT/figure.jpeg
 ---
 
 > [博客园](https://www.cnblogs.com/znpdco/p/18172429)
