fixed FWT.md 时 => 是

--- a/_posts/2024-05-07-FWT.md
+++ b/_posts/2024-05-07-FWT.md
@@ -1144,7 +1144,7 @@ int main() {
 >
 > $n\le10^5,a_i\le10^5$
 
-我们可以想到 dp：设计状态 $f_{i,s}$ 表示考虑到第 $i$ 个数，当前加法状态为 $s$。因为 FWT 变换时线性的，可以先变换为 FWT 点值表示法，然后变成自己的 $n$ 次幂，最后再变换回来。
+我们可以想到 dp：设计状态 $f_{i,s}$ 表示考虑到第 $i$ 个数，当前加法状态为 $s$。因为 FWT 变换是线性的，可以先变换为 FWT 点值表示法，然后变成自己的 $n$ 次幂，最后再变换回来。
 
 上面是平凡的，但是题目给出了模数 $2^{58}$。发现没有单位根，所以考虑扩域。
 
