--- a/_posts/2024-05-07-FWT.md
+++ b/_posts/2024-05-07-FWT.md
@@ -371,12 +371,18 @@ $$
 
 ## K 维 FWT
 
+其实位运算的本质是对一个 $n$ 维 $\{0,1\}$ 向量的运算。或运算就是每一维取 $\max$。且运算就是每一维取 $\min$。异或运算则是每一维对应相加再 $\bmod 2$。
+
+位运算有个特点：向量的每一位都是独立的。
+
+我们把扩展到 $\{0,1\}$ 也就是扩展到 $[0,k)\cap Z$ 进制，看看会得到什么？
+
 ### max 运算
 
-我们重新看看我们的 $\cup$ 运算，发现他实际上就是二进制下的取 $\max$。我们将其拓展到 $K$ 进制，有：
+我们将 $\cup$ 运算拓展到 $K$ 进制，定义 $i\cup j$ 表示按位取 $\max$，有：
 
 $$
-c(i,j)c(i,k)=c(i,\max(j,k))
+c(i,j)c(i,k)=c(i,j\cup k)
 $$
 
 若 $j=k$，那么上式又是：
@@ -409,10 +415,10 @@ $$
 
 ### min 运算
 
-我们重新看看我们的 $\cap$ 运算，发现他实际上就是二进制下的取 $\min$。我们将其拓展到 $K$ 进制，有：
+我们将 $\cap$ 运算拓展到 $K$ 进制，定义 $i\cap j$ 表示按位取 $\min$，有：
 
 $$
-c(i,j)c(i,k)=c(i,\min(j,k))
+c(i,j)c(i,k)=c(i,j\cap k)
 $$
 
 若 $j=k$，那么上式又是：
@@ -421,7 +427,7 @@ $$
 c(i,j)c(i,j)=c(i,j)
 $$
 
-也就是说，每一行的 $1$ 必定只能在 $0$ 的后面，如果在后面则不合法了。手玩一下可以发现一组合法构造：
+也就是说，每一行的 $1$ 必定只能在 $0$ 的后面，如果在前面则不合法了。手玩一下可以发现一组合法构造：
 
 $$
 \begin{bmatrix}
@@ -447,10 +453,10 @@ $$
 
 ### 不进位加法
 
-我们重新看看我们的 $\oplus$ 运算，发现他实际上就是二进制下的不进位加法。我们将其拓展到 $K$ 进制，有：
+我们将 $\oplus$ 运算拓展到 $K$ 进制，定义 $i\oplus j$ 表示按位相加再 $\bmod K$，有：
 
 $$
-c(i,j)c(i,k)=c(i,(j+k)\bmod K)
+c(i,j)c(i,k)=c(i,j\oplus k)
 $$
 
 我们构造 $c(i,j)=\omega_{K}^j$，就可以满足要求了：
@@ -474,9 +480,7 @@ $$
 \end{bmatrix}
 $$
 
-这不就是我们熟悉的范德蒙德矩阵吗？
-
-现在我们也知道矩阵的逆了：
+此即为 [范德蒙德矩阵](https://en.wikipedia.org/wiki/Vandermonde_matrix)，求逆可得：
 
 $$
 \frac{1}{K}\begin{bmatrix}
